[project]
name = "ppo-mlbda"
version = "0.1.0"
description = "PPO enhancements"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "torch>=2.0.0",
    "gymnasium>=1.0.0",
    "minigrid>=3.0.0",
    "stable-baselines3>=2.0.0",
    "matplotlib>=3.0.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pygame>=2.0.0",
    "wandb",
    "tyro",
    "tensorboard>=2.20.0",
    "moviepy>=2.2.1",
]
